# spotify-rust-cli

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: device.rs  get_artists.rs  handlers.rs  main.rs  oauth.rs  spotify.rs
src/args/: mod.rs
src/handlers/: mod.rs  track.rs
